<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSelf">

    <Button
        style = "@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button1"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="@string/one"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />

    <Button
        style = "@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button2"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="@string/two"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="658dp" />

    <Button
        style = "@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button3"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="3"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />

    <Button
        style = "@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button4"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="@string/four"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button5"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="@string/five"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />

    <Button
        style = "@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button6"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="@string/six"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />

    <Button
        style = "@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button7"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="@string/seven"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />

    <Button
        style = "@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button8"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="8"
        tools:layout_editor_absoluteX="315dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />

    <Button
        style = "@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/button9"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:text="9"
        tools:layout_editor_absoluteX="360dp"
        tools:layout_editor_absoluteY="658dp"
        tools:ignore="MissingConstraints" />


    <com.example.sudokuproj.sudokuBoard
        android:id="@+id/sudokuBoard"
        android:layout_width="400dp"
        android:layout_height="400dp"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:boardColor="#6600FF"
        custom:cellFillColor="#330088"
        >
    </com.example.sudokuproj.sudokuBoard>


</androidx.constraintlayout.widget.ConstraintLayout>